--- a/templates/administrator/files.panel.html
+++ b/templates/administrator/files.panel.html
@@ -49,22 +49,22 @@ main {
     width: 100px;
 }
 {% endblock css %}
-{% block h1title %}Administrator Panel Home{% endblock h1title %}
+{% block h1title %}Manage File Mirrors{% endblock h1title %}
 {% block content %}
     <div id="overlay">
         <div class="overlaypage">
             <div class="row">
                 <div class="social">
                     <img src="/static/imgs/git.png" alt="github" class="icon" />
-                    <a href="/AdministratorArea/Panel?__action__=GitRepositories"><h3>Manage Git Mirrors <span><img style="width: 15px;" src="/static/imgs/external_link.png" alt="external_link"></span></h3></a>
+                    <a href="/AdministratorArea/Panel/GitRepositories"><h3>Manage Git Mirrors <span><img style="width: 15px;" src="/static/imgs/external_link.png" alt="external_link"></span></h3></a>
                 </div>
                 <div class="social">
                     <img src="/static/imgs/files.png" alt="discord" class="icon" />
-                    <a href="/AdministratorArea/Panel?__action__=FileMirrors"><h3>Manage File Mirrors <span><img style="width: 15px;" src="/static/imgs/external_link.png" alt="external_link"></span></h3></a>
+                    <a href="/AdministratorArea/Panel/FileMirrors"><h3>Manage File Mirrors <span><img style="width: 15px;" src="/static/imgs/external_link.png" alt="external_link"></span></h3></a>
                 </div>
                 <div class="social">
                     <img src="/static/imgs/users.png" alt="cursedtwitch" class="icon" />
-                    <a href="/AdministratorArea/Panel?__action__=UserManagement"><h3>Manage Site Users <span><img style="width: 15px;" src="/static/imgs/external_link.png" alt="external_link"></span></h3></a>
+                    <a href="/AdministratorArea/Panel/UserManagement"><h3>Manage Site Users <span><img style="width: 15px;" src="/static/imgs/external_link.png" alt="external_link"></span></h3></a>
                 </div>
             </div>
         </div>
