--- a/templates/administrator/panel.html
+++ b/templates/administrator/panel.html
@@ -64,7 +64,7 @@ main {
                 </div>
                 <div class="social">
                     <img src="/static/imgs/users.png" alt="cursedtwitch" class="icon" />
-                    <a href="/AdministratorArea/Panel?__action__=UserManagement"><h3>Manage Site Users <span><img style="width: 15px;" src="/static/imgs/external_link.png" alt="external_link"></span></h3></a>
+                    <a href="/AdministratorArea/Panel?__action__=UpdateMonitors"><h3>Manage Update Monitors <span><img style="width: 15px;" src="/static/imgs/external_link.png" alt="external_link"></span></h3></a>
                 </div>
             </div>
         </div>
