--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="https://t2v.city/res/style/base.min.css">
-    <link rel="stylesheet" href="https://t2v.city/res/style/social.min.css">
+    <link rel="stylesheet" href="/static/css/base.min.css">
+    <link rel="stylesheet" href="/static/css/social.min.css">
     <style>{% block css %}{% endblock %}</style>
-    <style>
-
-    </style>
 </head>
 <body>
     <div class="page">
         <header>
-            <a href="/"><img class="logo" src="https://cdn.t2v.city/content/KQgCslvqJtiMCkBKQmZp/t2v.ch/img/t2vmirrorservices_minified.png" alt="logo" /></a>
+            <!-- <a href="/"><img class="logo" src="https://cdn.t2v.city/content/KQgCslvqJtiMCkBKQmZp/t2v.ch/img/t2vmirrorservices_minified.png" alt="logo" /></a> -->
             <h1>{% block h1title %}{% endblock %}</h1>
         </header>
         <main style="text-align: justify;">
