Started on Search and Made progress on home page

--- a/templates/guidownload.html
+++ b/templates/guidownload.html
@@ -31,7 +31,8 @@
   <span class="value" id="downloadProgressValue" style="width:0%;" ></span>
 </div>
 <br>
-<p>Download Failed? Try Downloading it Directly Here: <span><a href="/DirectDownload?file_path={{ file_path }}&__token__={{ __token__ }}">File DirectDownload</a></span></p>
+<p>Download Failed?</p>
+<p>Check the knowledgebase for more help: <span><a href="/Help/Cant-Download-File-Through-GUI">Help</a></span></p>
 
 <script>
     window.onload = waitToDownload()
