--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
 <body>
     <div class="page">
         <header>
-            <!-- <a href="/"><img class="logo" src="https://cdn.t2v.city/content/KQgCslvqJtiMCkBKQmZp/t2v.ch/img/t2vmirrorservices_minified.png" alt="logo" /></a> -->
+            <a href="/"><img class="logo" style="height: 50px;" src="https://cdn.t2v.city/content/KQgCslvqJtiMCkBKQmZp/t2v.ch/img/t2vmirrorservices_minified.png" alt="logo" /></a>
             <h1>{% block h1title %}{% endblock %}</h1>
         </header>
         <main style="text-align: justify;">
