--- a/templates/search.html
+++ b/templates/search.html
@@ -16,15 +16,13 @@ input {
 {% endblock css %}
 {% block content %}
 <div style="text-align: center">
-    <input name="Search" id="search" placeholder="Search" autocomplete="on" required="required" onkeydown="search(this)">
+    <div style="text-align: left; margin-left: 30px;">
+      <form method="post" action="/API/v1/GUI/ArchiveSearch">
+        <label for="search_request">Search Input</label><input name="search_request" id="search_request" placeholder="search_request" autocomplete="on" required="required">
+        <br><button type="submit" class="loginbutton">Submit</button>
+      </form>
+    </div>
 </div>
 <br>
 <br>
-<script>
-function search(ele) {
-    if(event.key === 'Enter') {
-        alert(ele.value);
-    }
-}
-</script>
 {% endblock content %}
