Greatly improved code structure, fixed search path, Separated all inline css/js into files

--- a/templates/fileinfo.html
+++ b/templates/fileinfo.html
@@ -2,27 +2,7 @@
 {% block title %}File Info | MirrorManager{% endblock title %}
 {% block h1title %}File Information for "{{ filename }}"{% endblock h1title %}
 {% block css %}
-.loginbutton {
-    font-size: 15px;
-    padding: 3px;
-    margin-left: 10px;
-    background-color:
-    white; color: #181A1B;
-    border-radius: 5px;
-    text-decoration: none;
-    border-bottom: 2px solid grey;
-    cursor: pointer;
-}
-.loginbutton:hover {
-    color: white;
-    background-color: grey;
-    border-top: 1px solid grey;
-    border-bottom: 0px;
-    -webkit-box-shadow: inset 0px 4px 0px 0px #0A0E12;
-    -moz-box-shadow: inset 0px 4px 0px 0px #0A0E12;
-    box-shadow: inset 0px 0px 4px 0px #0A0E12;
-    cursor: pointer;
-}
+<link rel="stylesheet" href="/Static/Styles/FileInfo.css">
 {% endblock css %}
 {% block content %}
  <table>
@@ -58,36 +38,4 @@
 <br>
 <a class="loginbutton" id="downloadLink" onclick="getDownloadLink()">Generate Download Link</a>
 <a class="loginbutton" id="curlcommand" onclick="copyCurlCommand()" style="visibility: hidden;">Copy cURL Command</a>
-<script>
-    function getDownloadLink() {
-        const requests = new XMLHttpRequest();
-        if (!requests) {
-          console.log('Failed to create XMLHttpRequest');
-          return false;
-        }
-        requests.open('POST', `/API/v1/GUI/GetDownloadLink?file_path={{ dir_path + '/' + filename }}`);
-        requests.send();
-        requests.onreadystatechange = function() {
-          if (requests.readyState === XMLHttpRequest.DONE) {
-            if (requests.status === 200) {
-              const downloadLink = document.getElementById('downloadLink');
-              let responseLink = requests.responseText.replace(/['"]+/g, '');
-              downloadLink.setAttribute("href", responseLink);
-              downloadLink.onclick = null;
-              downloadLink.textContent = 'GUI Download';
-              const curlDownload = document.getElementById('curlcommand');
-              curlDownload.setAttribute('style', 'visibility: visible;');
-              curlDownload.setAttribute('data', responseLink);
-            } else {
-              console.log('Failed to Contact API. Check Status');
-            }
-          }
-        }
-    }
-    function copyCurlCommand() {
-        const curlDownload = document.getElementById('curlcommand');
-        navigator.clipboard.writeText(curlDownload.data);
-        curlDownload.textContent = 'Command Copied!';
-    }
-</script>
 {% endblock content %}
