--- a/templates/home.html
+++ b/templates/home.html
@@ -3,55 +3,47 @@
 <head>
     <meta charset="utf-8">
     <title>Home | MirrorManager</title>
-    <link rel="stylesheet" href="/static/css/base.min.css">
-    <link rel="stylesheet" href="/static/css/social.min.css">
+    <link rel="stylesheet" href="/Static/Styles/Base.min.css">
+    <link rel="stylesheet" href="/Static/Styles/Core.min.css">
     <style>{% block css %}{% endblock %}</style>
 </head>
 <body>
     <div class="page">
-        <header>
+        <header style="margin:0;padding:0;">
             <a href="/"><img class="logo" style="height: 50px;" src="https://cdn.t2v.city/content/KQgCslvqJtiMCkBKQmZp/t2v.ch/img/t2vmirrorservices_minified.png" alt="logo" /></a>
-            <h1>Part of the t2v Archive </h1>
+            <h2 style="vertical-align: middle;"><img style="vertical-align: middle;width:40px;" src="/Static/Images/55px-TodoList.png">Club Penguin Archives Mirror<img style="vertical-align: middle;width:40px;" src="/Static/Images/55px-Administrator.png"></h2>
         </header>
         <main style="text-align: center;">
             <div id="privacy" style="padding: 15px; display: inline-flex;">
                 <a href="/Pub/ListDirectory" style="text-align: center">
                     <div>
-                            <img src="/static/imgs/files.png" style="width: 50px"  alt="files"/>
+                            <img src="/Static/Images/files.png" style="width: 50px" alt="files"/>
                             <p>Explore Files</p>
                     </div>
                 </a>
                 <hr style="width: 1px; height: 60px; margin-left: 12px; margin-right: 17px">
                 <a href="/Pub/SearchFiles?__in__=Root" style="align-items: center">
                     <div>
-                            <img src="/static/imgs/search.png" style="width: 50px"  alt="files"/>
+                            <img src="/Static/Images/search.png" style="width: 50px" alt="files"/>
                             <p>Search Files</p>
                     </div>
                 </a>
                 <hr style="width: 1px; height: 60px; margin-left: 12px; margin-right: 17px">
-                <a href="/KbRedirect/" style="align-items: center">
+                <a href="https://clubpenguin.archives.t2v.city/WikiArchive" style="align-items: center">
                     <div>
-                            <img src="/static/imgs/external_link.png" style="width: 50px"  alt="files"/>
-                            <p>Knowledgebase</p>
+                            <img src="/Static/Images/external_link.png" style="width: 50px" alt="files"/>
+                            <p>Wiki Archives</p>
                     </div>
                 </a>
             </div>
         </main>
         <br>
         <footer>
-            <p>Powered by<span><a href="https://ttea.dev/t2v/mm">MirrorManager</a></span>- 2022 &copy; t2v</p>
-            <br><p>Page Loaded in <span id="pageloadtime">0</span> ms</p>
+            <p>Special thanks to <a href="https://solero.me">Solero</a> for archive content</p>
+            <!--<p>Page Loaded in <span id="pageloadtime">0</span> ms</p>-->
+            <p id="performance-metrics">Template: <strong>{{ template_time }}ms</strong> - </p>
         </footer>
     </div>
-    <script>
-        function updateLocalElement() {
-            const pltEle = document.getElementById('pageloadtime');
-            let time = performance.timing;
-            let pageloadtime = time.loadEventStart - time.navigationStart;
-            pltEle.textContent = pageloadtime;
-        }
-
-        window.onload = updateLocalElement()
-    </script>
+  <script src="/Static/Scripts/Metrics/LoadTime.js"></script>
 </body>
 </html>
