--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="/static/css/base.min.css">
-    <link rel="stylesheet" href="/static/css/social.min.css">
-    <!-- TODO fix broken css when there are many contents on screen -->
-    <style>{% block css %}{% endblock %}</style>
+    <link rel="stylesheet" href="/Static/Styles/Base.min.css">
+    <link rel="stylesheet" href="/Static/Styles/Core.min.css">
+    <!-- TODO fix broken Styles when there are many contents on screen -->
+    {% block css %}{% endblock %}
 </head>
 <body>
     <div class="page">
-        <header>
+        <header style="margin:0;padding:0;">
             <a href="/"><img class="logo" style="height: 50px;" src="https://cdn.t2v.city/content/KQgCslvqJtiMCkBKQmZp/t2v.ch/img/t2vmirrorservices_minified.png" alt="logo" /></a>
-            <h1>{% block h1title %}{% endblock %}</h1>
+            <h2 style="vertical-align: middle;"><img style="vertical-align: middle;width:40px;" src="/Static/Images/55px-TodoList.png">{% block h1title %}{% endblock %}<img style="vertical-align: middle;width:40px;" src="/Static/Images/55px-Administrator.png"></h2>
         </header>
         <main style="text-align: justify;">
             <div id="privacy" style="padding: 15px;">
@@ -22,19 +22,11 @@
         <br>
         <footer>
             <p><span><a style="cursor: pointer;" onclick="history.back()"><</a></span> | <span><a href="/">home</a></span> | <span><a style="cursor: pointer;" onclick="history.forward()">></a></span></p>
-            <p>Powered by<span><a href="https://ttea.dev/t2v/mm">MirrorManager</a></span>- 2022 &copy; t2v</p>
-            <br><p>Page Loaded in <span id="pageloadtime">0</span> ms</p>
+            <p>Special thanks to <a href="https://solero.me">Solero</a> for archive content</p>
+            <!--<p>Page Loaded in <span id="pageloadtime">0</span> ms</p>-->
+            <p id="performance-metrics">Template: <strong>{{ template_time }}ms</strong> - </p>
         </footer>
     </div>
-    <script><!-- TODO fix page loaded time to a more readable time format -->
-        function updateLocalElement() {
-            const pltEle = document.getElementById('pageloadtime');
-            let time = performance.timing;
-            let pageloadtime = time.loadEventStart - time.navigationStart;
-            pltEle.textContent = pageloadtime;
-        }
-
-        window.onload = updateLocalElement()
-    </script>
+  <script src="/Static/Scripts/Metrics/LoadTime.js"></script>
 </body>
 </html>
