Made file browsing a little nicer

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 <body>
     <div class="page">
         <header style="margin:0;padding:0;">
-            <a href="/"><img class="logo" style="height: 50px;" src="https://cdn.t2v.city/content/KQgCslvqJtiMCkBKQmZp/t2v.ch/img/t2vmirrorservices_minified.png" alt="logo" /></a>
+            <a href="/"><img class="logo" style="height: 90px;margin-bottom: -10px" src="/Static/Images/veearchives.webp" alt="logo" /></a>
             <h2 style="vertical-align: middle;"><img style="vertical-align: middle;width:40px;" src="/Static/Images/55px-TodoList.png">Club Penguin Archives Mirror<img style="vertical-align: middle;width:40px;" src="/Static/Images/55px-Administrator.png"></h2>
         </header>
         <main style="text-align: center;">
@@ -29,7 +29,7 @@
                     </div>
                 </a>
                 <hr style="width: 1px; height: 60px; margin-left: 12px; margin-right: 17px">
-                <a href="https://clubpenguin.archives.t2v.city/WikiArchive" style="align-items: center">
+                <a href="https://archives.vee.city/ClubPenguin/WikiArchive" style="align-items: center">
                     <div>
                             <img src="/Static/Images/external_link.png" style="width: 50px" alt="files"/>
                             <p>Wiki Archives</p>
